frontend/tests/cases/negative/flatten/flattenLevel.gr
flattenLevel : ∀ { k : Sec, l : Sec } . (Int [k]) [l] → Int [k ∨ l]
flattenLevel [[x]] = [x]